# mountaineer-playground

./: README.md  docker-compose.yml  pyproject.toml
mountaineer_playground/: app.py  cli.py  config.py  main.py
mountaineer_playground/controllers/: detail.py  home.py
mountaineer_playground/models/: detail.py
mountaineer_playground/views/: package-lock.json
mountaineer_playground/views/app/detail/: page.tsx
mountaineer_playground/views/app/home/: page.tsx
